tests/build/cases/widget_new/cannot_unset_in_when.stderr
error: cannot unset in when assign
 --> cases/widget_new/cannot_unset_in_when.rs:9:22
  |
9 |             margin = unset!;
  |                      ^^^^^
